# libxosd

./: README.md
debian/0.4.0-3/: xmms_osd.c
debian/0.5.0-2/: Makefile
debian/0.7.0-2/: Makefile
debian/0.7.0-4/: osd_cat.c
debian/1.0.2-1/: configure.in
debian/1.0.3-1/: xosd.spec
debian/1.0.4-2/: configure.in
debian/2.0.2-1/: configure
debian/2.1.0-1/: configure
debian/2.1.2-1/: configure
debian/2.2.1-1/: aclocal.m4
debian/2.2.1-2/: aclocal.m4  configure
debian/2.2.1-3/: configure  configure.ac
debian/2.2.10-1/: configure
debian/2.2.12-3/: configure
debian/2.2.13-1/: ChangeLog
debian/2.2.13-2/: xosd.spec
debian/2.2.2-1/: configure
debian/2.2.4-1/: aclocal.m4
debian/2.2.4-1.3/: aclocal.m4
debian/2.2.4-3/: configure
debian/2.2.7-1/: configure  xosd.spec
debian/2.2.8-2/: xosd.spec
debian/2.2.8-5/: configure
debian/2.2.9-pre3-1/: configure
debian/current/: CHANGELOG  ChangeLog  Makefile.in  aclocal.m4  configure  configure.ac  configure.in  xosd.c  xosd.spec
release/1.0.0/: ChangeLog~  Makefile.in  configure
release/1.0.2/: Makefile.in  configure
release/2.0.0/: configure
release/2.0.2/: xosd.spec
source/current/: AUTHORS  CHANGELOG  ChangeLog  Makefile  Makefile.am  README  configure.ac  configure.in  xmms_osd.c  xosd.c  xosd.h  xosd.spec.in
source/current/man/: osd_cat.1  xosd.3
source/current/script/: xosd-config.in
source/current/src/: Makefile.am  osd_cat.c  testprog.c  xmms_osd.c  xosd.c  xosd.h
source/current/src/libxosd/: intern.h  xosd.c
source/current/src/xmms_plugin/: Makefile.am  xmms_osd.c
(+248 files in other folders)
